--- a/nextjs-task-system/package.json
+++ b/nextjs-task-system/package.json
@@ -8,19 +8,29 @@
     "start": "next start",
     "format": "prettier . --write",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "orm:generate": "npx drizzle-kit generate",
+    "orm:migrate": "npx drizzle-kit migrate",
+    "orm:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.4",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.0",
     "flowbite-react": "^0.8.0",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.25",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.18",
+    "drizzle-kit": "^0.30.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
@@ -29,6 +39,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
