--- a/nextjs-task-system/package.json
+++ b/nextjs-task-system/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.0",
     "flowbite-react": "^0.8.0",
+    "lucide-react": "^0.468.0",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
