--- a/nextjs-task-system/package.json
+++ b/nextjs-task-system/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "vitest",
     "format": "prettier . --write",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.0",
     "flowbite-react": "^0.8.0",
@@ -23,7 +25,9 @@
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
