--- a/nextjs-task-system/package.json
+++ b/nextjs-task-system/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
-    "@testing-library/react": "^16.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,10 +33,12 @@
     "vitest": "^2.1.8"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.30.0",
     "eslint": "^8",
