✨ update environment configuration, rename project, and add new dependencies

--- a/nextjs-task-system/.env.example
+++ b/nextjs-task-system/.env.example
@@ -6,3 +6,4 @@ AUTH_GITHUB_SECRET= # From github oauth
 NEXTAUTH_URL=http://localhost:3000
 DATABASE_DIALECT=postgres
 TEST_USER_ID= # Can take it from drizzle .studio
+REDIRECT_URI=
