--- a/nextjs-task-system/package.json
+++ b/nextjs-task-system/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flowbite-react-template-nextjs",
+  "name": "taskmaster-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,11 +23,13 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -41,6 +43,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8",
     "zod": "^3.24.1"
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^19.0.1",
